--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -11,3 +11,98 @@
     font-size: 35px;
     font-weight: 700;
 }
+
+.guarantee {
+    background-image: url("https://www.virtuwell.com/oh-so-simple-guarantee.f9d8d6182c66cfe6dfcb.webp");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: 50%;
+    height: 500px;
+    margin-left: 38rem;
+    margin-top: 5rem;
+}
+
+.card {
+    margin-left: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100px;
+    width: 50%;
+    margin-top: -18rem;
+    margin-bottom: 6rem;
+    height: 400px;
+    border-bottom: .25rem solid #AED248;
+    border-radius: 0;
+}
+
+.card-header {
+    font-size: 3rem;
+    margin-bottom: 1.5rem;
+    font-weight: 600;
+}
+
+.card-content {
+    margin-top: 1rem;
+    color: #495057;
+    font-size: 1.25rem;
+    font-weight: 500;
+    line-height: 2rem;
+}
+.global {
+    margin-bottom: 10%;
+}
+.global-image {
+    background: url("https://www.virtuwell.com/our-impact-map.e49bc675737158ad4f58.webp");
+    height: 400px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+}
+
+.impact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right:35rem;
+    margin-top: -17rem;
+    margin-bottom: 5rem;
+}
+
+.impact h3 {
+    font-size: 30px;
+}
+
+.impact h1 {
+    font-size: 40px;
+    line-height: 4rem;
+    width: 50%;
+    text-align: center;
+    flex-wrap: wrap;
+    display: flex;
+    font-weight: 600;
+}
+
+.stats {
+    display: flex;
+    flex-direction: column;
+    margin-top: -28%;
+    margin-left: 35%;
+    line-height: normal;
+    text-align: center;
+}
+
+.nums {
+    color: #954FBA;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.nums_data {
+    color: #495057;
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+}
