--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,26 +1,24 @@
 <mat-toolbar>
-    <div class="logo">
-        <a href="https://careers.virtuwell.com/" style="border-bottom: none"
-          >
-          <img [src]="url" alt="virtuwell_logo" height="20px">
+  <div class="logo">
+    <a href="https://careers.virtuwell.com/" style="border-bottom: none">
+      <img [src]="url" alt="virtuwell_logo" height="20px" />
     </a>
-      </div>
-      <div id="nav_contents" class="navbar_contents">
-        <a href="#" class="contents">How it works</a>
-        <a href="#" class="contents">Treatment & services</a>
-        <a href="#" class="contents">Pricing & Insurance</a>
-        <a href="#" class="contents">Inside virtuwell</a>
-        <a href="#" class="contents">Reviews</a>
-        <a href="#" class="contents">Blog</a>
-        <a href="#" class="contents">FAQ</a>
-        <a href="#" class="contents" style="color: #9252bc">Sign in</a>
-        <!-- <a
+  </div>
+  <div id="nav_contents" class="navbar_contents">
+    <a href="#" class="contents">How it works</a>
+    <a href="#" class="contents">Treatment & services</a>
+    <a href="#" class="contents">Pricing & Insurance</a>
+    <a href="#" class="contents">Inside virtuwell</a>
+    <a href="#" class="contents">Reviews</a>
+    <a href="#" class="contents">Blog</a>
+    <a href="#" class="contents">FAQ</a>
+    <a href="#" class="contents" style="color: #9252bc">Sign in</a>
+    <!-- <a
           href="#"
           id="get_started"
           class="contents"
           style="background-color: #9252bc; color: white; margin-right: 0px"
           >Get started</a
         > -->
-      </div>
-      
-  </mat-toolbar>
+  </div>
+</mat-toolbar>
