--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,35 +1,46 @@
 .banner {
-    background: url("https://www.virtuwell.com/assets/images/hero_inside-virtuwell.webp");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 400px;
-    width: 100%;
-    /* margin-top: 1rem; */
-    text-align: center;
+  background-image: url("https://www.virtuwell.com/assets/images/hero_inside-virtuwell.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 80vh;
+  width: 100%;
+  /* margin-top: 1rem; */
+  text-align: center;
 }
 .banner-text h1 {
-    font-weight: bold;
-    color: white;
-    font-size: 350%;
-    margin-top: 2rem;
+  font-weight: bold;
+  color: white;
+  font-size: 4.5rem;
+  margin-top: 4rem;
 }
 .banner-text h3 {
-    font-weight: bold;
-    color: #aed248;
-    font-size: 300%;
-    line-height: 50px;
+  font-weight: bold;
+  color: #aed248;
+  font-size: 4rem;
+  line-height: 100px;
 }
 
 .banner-text {
-    display: flex;
-    flex-direction: column;
-    padding-top: 100px;
-    text-align: center;
-    margin-bottom: 2rem;  
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .btn-getstarted {
-    background-color: #825FC2;
-    color: white;
-    border-radius: 0%;
+  background-color: #825fc2;
+  background-image: linear-gradient(
+    90deg,
+    rgba(149, 79, 186, 0.25) 0,
+    rgba(69, 147, 224, 0.25)
+  );
+  color: white;
+  padding: 1rem 2rem;
+  font-size: x-large;
+  border-radius: 0%;
+}
+
+.th_break {
+  width: 6%;
 }
