--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,7 +1,8 @@
 <div class="banner">
-    <div class="banner-text">
-        <h1>Here to change</h1>
-        <h3>healthcare.</h3>
-    </div>
-    <button mat-flat-button class="btn-getstarted">Get Started</button>
+  <div class="banner-text">
+    <h1>Here to change</h1>
+    <h3>healthcare.</h3>
+    <hr class="th_break" />
+  </div>
+  <button mat-flat-button class="btn-getstarted">Get Started</button>
 </div>
