--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,19 +1,26 @@
 mat-toolbar {
-    background-color: white;
-    margin-top: 0.5rem;
+  background-color: white;
+  /* margin-top: 0.5rem; */
+}
+
+#nav_contents {
+  height: 4rem;
+  margin-top: 1.95rem;
 }
 
 #nav_contents a {
-    margin-right: 2rem;
-    color: black;
-    text-decoration: none;
-    font-size: 15px;
+  margin-right: 2rem;
+  padding: 1.3rem 0;
+  color: #495057;
+  text-decoration: none;
+  /* font-size: 15px; */
+  transition: all 0.15s ease-in-out;
 }
 #nav_contents a:hover {
-    color: #954fba;
-    border-bottom: 0.3rem solid #954fba;
+  color: #954fba;
+  box-shadow: inset 0 -0.3rem 0 #954fba;
+  /* border-bottom: 0.3rem solid #954fba; */
 }
 .logo img {
-    margin-right: 5rem;
+  margin-right: 5rem;
 }
-
