added history component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-vision></app-vision>
 <app-promise></app-promise>
 <app-experience></app-experience>
+<app-history></app-history>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
