--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -40,7 +40,7 @@
   .lang-bg {
     background-color: #f2f2f2;
     padding-top: 2rem;
-    max-width: 100%;
+    /* max-width: 100%; */
     padding-bottom: 2rem;
     display: flex;
     flex-wrap: wrap;
