provider-component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 <app-promise></app-promise>
 <app-experience></app-experience>
 <app-history></app-history>
+<app-providers></app-providers>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
