--- a/src/app/components/history/history.component.css
+++ b/src/app/components/history/history.component.css
@@ -7,6 +7,17 @@
     align-items: center;
 }
 
+.heading h2 {
+    font-size: 28px;
+    color: #495057;
+}
+.heading h1 {
+    margin-top: 1rem;
+    font-size: 50px;
+    color: black;
+    font-weight: 500;
+}
+
 .img {
     margin-left: 15%;
 }
@@ -19,9 +30,10 @@
 .img-head {
     color: #495057;
     margin-left: 1rem;
+    margin-top: 3rem;
 }
 .img-p {
-    margin-top: 4rem;
+    margin-top: 6rem;
     width: 25%;
     margin-left: -3rem;
     font-size: 15px;
