--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,5 +1,6 @@
 mat-toolbar {
   background-color: white;
+  /* position: fixed; */
   /* margin-top: 0.5rem; */
 }
 
@@ -23,4 +24,9 @@ mat-toolbar {
 }
 .logo img {
   margin-right: 5rem;
+}
+.btn-getstarted {
+ color: white;
+  background-image: linear-gradient(90deg,rgba(148, 80, 187) 0,rgba(148, 80, 187));
+
 }
