--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,7 @@
 <app-experience></app-experience>
 <app-history></app-history>
 <app-providers></app-providers>
+<app-careers></app-careers>
+<app-business></app-business>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
