--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -5,50 +5,14 @@
     <hr class="th_break" />
   </div>
   <div class="perks">
-    <div class="perks_subdiv">
+    <div class="perks_subdiv" *ngFor="let business of businesses">
       <img
-        src="https://www.virtuwell.com/assets/images/inside-virtuwell/business_network.svg"
+        [src]="business.image"
         alt="business_network"
       />
       <div class="perks_subsubdiv">
-        <h3>Network provider</h3>
-        <p>
-          Virtuwell is a 24/7 telemedicine provider, not a software vendor, and
-          can be offered alongside other telemedicine solutions. When included
-          as an in-network benefit, Virtuwell reduces costs for health plans and
-          members with every visit.
-        </p>
-      </div>
-    </div>
-    <div class="perks_subdiv">
-      <img
-        src="https://www.virtuwell.com/assets/images/inside-virtuwell/business_implementation.svg"
-        alt="business_implementation"
-      />
-      <div class="perks_subsubdiv">
-        <h3>Implementation</h3>
-        <p>
-          It's easy to add Virtuwell to your network - use the same process you
-          use for any other provider. You decide the benefit, and Virtuwell fits
-          in any plan design, including HSAs. And claims processing is easy with
-          standard CPT codes.
-        </p>
-      </div>
-    </div>
-    <div class="perks_subdiv">
-      <img
-        src="https://www.virtuwell.com/assets/images/inside-virtuwell/business_cost.svg"
-        alt="business_cost"
-      />
-      <div class="perks_subsubdiv">
-        <h3>Costs</h3>
-        <p>
-          The cost of a Virtuwell visit is $59, never more. There's no PEPM fee
-          and no cost if Virtuwell can't treat. And there's no hidden fees for
-          health plans or employers - no administration cost, no licensing cost
-          and no set-up cost. It's not too good to be true, it's just the way
-          healthcare should be: simple.
-        </p>
+        <h3>{{ business.header }}</h3>
+        <p>{{ business.para }}</p>
       </div>
     </div>
   </div>
