--- a/src/app/components/careers/careers.component.css
+++ b/src/app/components/careers/careers.component.css
@@ -5,13 +5,13 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  margin-bottom: 5rem;
+  margin-bottom: 18%; 
 }
 
 .card {
   width: 35%;
-  height: 40%;
-  margin-top: 25rem;
+  height: 50%;
+  margin-top: 18rem;
   margin-right: 6rem;
   background-color: white;
   padding: 3rem;
@@ -34,17 +34,18 @@
   font-weight: 500;
   line-height: 1.5;
   font-size: 1rem;
+  margin-bottom: 3rem;
 }
 
 .th_break {
   width: 4rem;
-  margin: 3.5rem 0;
 }
 
 .btn-careers {
   background-color: #954fba;
   color: white;
   border: none;
+  margin-top: 1.5rem;
 
   background-image: linear-gradient(
     90deg,
