--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -17,6 +17,8 @@
     font-weight: 500;
     font-size: larger;
     cursor: pointer;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
   .foot_nav ul li:hover {
     color: #731b9f;
