--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -26,7 +26,19 @@ mat-toolbar {
   margin-right: 5rem;
 }
 .btn-getstarted {
- color: white;
-  background-image: linear-gradient(90deg,rgba(148, 80, 187) 0,rgba(148, 80, 187));
+  background-color: #825fc2;
+  background-image: linear-gradient(
+    90deg,
+    rgba(149, 79, 186, 0.25) 0,
+    rgba(69, 147, 224, 0.25)
+  );
+  color: white;
+  padding: 0.2rem 1.25rem;
+  border-radius: 0%;
+  display: none;
+}
 
+.contents-signin {
+  margin-left: 7rem;
+  
 }
