--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
     <a href="#" class="contents">Reviews</a>
     <a href="#" class="contents">Blog</a>
     <a href="#" class="contents">FAQ</a>
-    <a href="#" class="contents" style="color: #9252bc">Sign in</a>
+    <a href="#" class="contents-signin" style="color: #9252bc">Sign in</a>
     <button mat-raised-button class="btn-getstarted">Get Started</button>
   </div>      
 </mat-toolbar>
