--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -3,12 +3,139 @@
   <h1>A better experience</h1>
 </div>
 
-<div class="table">A table will come here</div>
+<div class="table">
+  <table>
+    <tr>
+      <th>Features</th>
+      <th class="logo-cell">
+        <img
+          src="https://www.virtuwell.com/assets/images/logo-mobile.webp"
+          alt="logo-mobile"
+        />
+      </th>
+      <th>Traditional Healthcare</th>
+    </tr>
+    <tr>
+      <td>
+        <p>Open 24/7</p>
+        <hr />
+      </td>
+      <td class="center-td">
+        <p><mat-icon>check</mat-icon></p>
+        <hr />
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>Start anytime, from any device</p>
+        <hr />
+      </td>
+      <td class="center-td">
+        <p><mat-icon>check</mat-icon></p>
+        <hr />
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>No waiting rooms</p>
+        <hr />
+      </td>
+      <td class="center-td">
+        <p><mat-icon>check</mat-icon></p>
+        <hr />
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>Private even in public - no sound or video required</p>
+        <hr />
+      </td>
+      <td class="center-td">
+        <p><mat-icon>check</mat-icon></p>
+        <hr />
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>Easy to follow treatment plans</p>
+        <hr />
+      </td>
+      <td class="center-td">
+        <p><mat-icon>check</mat-icon></p>
+        <hr />
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>Free follow-up care</p>
+        <hr />
+      </td>
+      <td class="center-td">
+        <p><mat-icon>check</mat-icon></p>
+        <hr />
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>Money back guarantee</p>
+        <hr />
+      </td>
+      <td class="center-td">
+        <p><mat-icon>check</mat-icon></p>
+        <hr />
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>No charges if we can't treat</p>
+        <!-- <hr /> -->
+      </td>
+      <td id="last-td" class="center-td">
+        <p>
+          <mat-icon>check</mat-icon>
+        </p>
+        <!-- <hr /> -->
+      </td>
+      <td class="right-td">
+        <p><mat-icon>close</mat-icon></p>
+        <!-- <hr /> -->
+      </td>
+    </tr>
+  </table>
+</div>
 
 <div class="header">
   <h3>Transparent Pricing</h3>
   <h1>Compare the cost</h1>
-  <img [src]="url" alt="graph"/>
+  <img [src]="url" alt="graph" />
 </div>
 
 <div class="guarantee"></div>
