--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,17 @@
 
-  <mat-toolbar>
+  <nav>
+    <div id="hambug">
+      <div id="hambug_menu">
+        
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        
+      </div>
+    </div>
     <div class="logo">
       <a href="https://careers.virtuwell.com/" style="border-bottom: none">
         <img [src]="url" alt="virtuwell_logo" height="20px" />
@@ -16,4 +28,13 @@
       <a href="#" class="contents" style="color: #9252bc">Sign in</a>
       <button mat-raised-button class="btn-getstarted">Get Started</button>
     </div>      
-  </mat-toolbar>
+  </nav>
+  <div id="nav_contents_1">
+    <a href="#">Home</a>
+    <a href="#">How it works</a>
+    <a href="#">Our services</a>
+    <a href="#">Pricing & Insurance</a>
+    <a href="#">Inside virtuwell</a>
+    <a href="#">Reviews</a>
+    <a href="#">Blog</a>
+  </div>
