--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -10,6 +10,8 @@
     <div class="img-head">
       <h2>{{history.header}}</h2>
     </div>
-    <p class="img-p">{{history.para}}</p>
+    <div class="img-p">
+      <p>{{history.para}}</p>
+    </div>
   </div>
 </div>
