--- a/src/app/components/careers/careers.component.css
+++ b/src/app/components/careers/careers.component.css
@@ -4,13 +4,14 @@
   background-image: url("https://www.virtuwell.com/assets/images/inside-virtuwell/culture-of-good-desktop.webp");
   width: 100%;
   height: 100%;
+  background-repeat: no-repeat;
   background-size: cover;
   margin-bottom: 18%; 
 }
 
 .card {
   width: 35%;
-  height: 50%;
+  height: max-content;
   margin-top: 18rem;
   margin-right: 6rem;
   background-color: white;
@@ -61,4 +62,19 @@
   color: white;
   text-decoration: none;
   font-size: large;
+}
+
+@media screen and (max-width: 1024px) {
+  .card {
+    width: 70%;
+    margin-top: 20rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .card h1 {
+    font-size: 2rem;
+  }
+  .careers {
+    background-position: center;
+  }
 }
