--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -13,6 +13,9 @@
   font-weight: 700;
   margin-bottom: 3rem;
 }
+.header img {
+  width: 80%;
+}
 
 .guarantee {
   background-image: url("https://www.virtuwell.com/oh-so-simple-guarantee.f9d8d6182c66cfe6dfcb.webp");
@@ -35,7 +38,7 @@
   margin-left: 18rem;
   margin-bottom: 6rem;
   padding: 4rem;
-  height: 400px;
+  height: max-content;
   border-bottom: 0.25rem solid #aed248;
   box-shadow: 0.1rem 1.5rem 3rem 0 rgb(0 0 0 / 10%);
   border-radius: 0;
@@ -204,4 +207,27 @@ th:last-child {
 
 .logo-cell img {
   max-width: 8rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .guarantee {
+    margin: 5rem auto;
+    background-position-y: 80%;
+  }
+  .card {
+    margin: 1rem auto;
+    width: 50%;
+  }
+  .impact-stats {
+    flex-direction: column;
+    margin-top: 10rem;
+    background-position: center;
+  }
+  .impact h1{
+    font-size: 2rem;
+    width: 80%;
+  }
+  .card-header {
+    line-height: 1.2;
+  }
 }
