--- a/src/app/components/promise/promise.component.css
+++ b/src/app/components/promise/promise.component.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width: 80%;
 }
 
 .promise h2 {
@@ -19,6 +20,7 @@
 .promise h1 {
     font-size: 3rem;
     font-weight: bold;
+    line-height: 1.3;
 }
 .people {
     text-align: center;
@@ -36,10 +38,24 @@
 .peoples {
     display: flex;
     flex-direction: column;
- ;
 }
 
 .peoples img {
     max-width: 100%;
     
+}
+
+@media screen and (max-width: 768px) {
+    .promise h1{
+        font-size: 2rem;
+    }
+    .promise h2{
+        font-size: 20px;
+    }
+    .peoples {
+        flex: 0.5;
+    }
+    .images {
+        flex-wrap: wrap;
+    }
 }
