--- a/src/app/components/providers/providers.component.css
+++ b/src/app/components/providers/providers.component.css
@@ -44,3 +44,27 @@
     margin-right: 14rem;
     padding-top: 4.7rem;
 }
+
+@media screen and (max-width: 1024px) {
+    .container {
+        flex-direction: column-reverse;
+    }
+    .provider-text {
+        width: 80%;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .container img {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .container h2 {
+        font-size: 2rem;
+        line-height: 2.5rem;
+    }
+    .container p{
+        text-align: left;
+        font-size: 17px;
+    }
+}
