--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,40 +1,37 @@
-
-  <nav>
-    <div id="hambug">
-      <div id="hambug_menu">
-        
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-        
-      </div>
+<nav>
+  <div id="hambug" (click)="myFunction()">
+    <div id="hambug_menu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
-    <div class="logo">
-      <a href="https://careers.virtuwell.com/" style="border-bottom: none">
-        <img [src]="url" alt="virtuwell_logo" height="20px" />
-      </a>
-    </div>
-    <div id="nav_contents" class="navbar_contents">
-      <a href="#" class="contents">How it works</a>
-      <a href="#" class="contents">Treatment & services</a>
-      <a href="#" class="contents">Pricing & Insurance</a>
-      <a href="#" class="contents">Inside virtuwell</a>
-      <a href="#" class="contents">Reviews</a>
-      <a href="#" class="contents">Blog</a>
-      <a href="#" class="contents">FAQ</a>
-      <a href="#" class="contents" style="color: #9252bc">Sign in</a>
-      <button mat-raised-button class="btn-getstarted">Get Started</button>
-    </div>      
-  </nav>
-  <div id="nav_contents_1">
-    <a href="#">Home</a>
-    <a href="#">How it works</a>
-    <a href="#">Our services</a>
-    <a href="#">Pricing & Insurance</a>
-    <a href="#">Inside virtuwell</a>
-    <a href="#">Reviews</a>
-    <a href="#">Blog</a>
   </div>
+  <div class="logo">
+    <a href="https://careers.virtuwell.com/" style="border-bottom: none">
+      <img [src]="url" alt="virtuwell_logo" height="20px" />
+    </a>
+  </div>
+  <div id="nav_contents" class="navbar_contents">
+    <a href="#" class="contents">How it works</a>
+    <a href="#" class="contents">Treatment & services</a>
+    <a href="#" class="contents">Pricing & Insurance</a>
+    <a href="#" class="contents">Inside virtuwell</a>
+    <a href="#" class="contents">Reviews</a>
+    <a href="#" class="contents">Blog</a>
+    <a href="#" class="contents">FAQ</a>
+    <a href="#" class="contents" style="color: #9252bc">Sign in</a>
+    <button mat-raised-button class="btn-getstarted">Get Started</button>
+  </div>
+</nav>
+<div id="nav_contents_1">
+  <a href="#">Home</a>
+  <a href="#">How it works</a>
+  <a href="#">Our services</a>
+  <a href="#">Pricing & Insurance</a>
+  <a href="#">Inside virtuwell</a>
+  <a href="#">Reviews</a>
+  <a href="#">Blog</a>
+</div>
