--- a/src/app/components/vision/vision.css
+++ b/src/app/components/vision/vision.css
@@ -1,28 +1,33 @@
 .container {
-    margin-top: 3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .container h1 {
-    font-size: 40px;
-    /* width: 50%; */
-    line-height: 3rem;
-    color: #212529;
-    font-weight: 700;
+  font-size: 40px;
+  /* width: 50%; */
+  line-height: 3rem;
+  color: #212529;
+  font-weight: 700;
 }
 
 .container h2 {
-    color: grey;
-    width: 50%;
+  color: grey;
+  width: 50%;
 }
 
 .container h2.vision {
-    font-size: 25px;
+  font-size: 25px;
 }
 .container h2.promise {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 
+@media screen and (max-width: 1024px) {
+  .container h2 {
+    width: 80%;
+  }
+}
